--- a/time.html
+++ b/time.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Czech Republic Time and Date</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Our Timezone</title>
   <style>
     body {
       font-family: sans-serif;
@@ -13,7 +15,112 @@
       align-items: center;
       min-height: 100vh;
       margin: 0;
+      overflow: hidden; /* Hide overflow while loading */
+      position: relative; /* Needed for positioning the arrow */
     }
+
+    /* Go back arrow style */
+    .go-back-arrow {
+      position: absolute;
+      top: 25px;
+      left: 25px;
+      width: 20px; /* Adjust the size of the arrow */
+      height: 20px; /* Adjust the size of the arrow */
+      cursor: pointer;
+      z-index: 100; /* Ensure it stays above other content */
+      opacity: 0; /* Initially hidden */
+      visibility: hidden; /* Initially hidden */
+      transition: opacity 1s ease, visibility 1s ease, transform 0.3s ease; /* Added smooth transition for transform */
+    }
+
+    .go-back-arrow.show {
+      opacity: 1;
+      visibility: visible; /* Make visible after the animation */
+    }
+
+    .go-back-arrow:hover {
+      transform: scale(1.1); /* Slight scaling effect on hover */
+      transition: transform 0.3s ease; /* Added smooth transition for transform */
+    }
+
+
+    /* Loading animation */
+    .loading-container {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100px;
+      height: 100px;
+      animation: rotateContainer 3s ease-in-out forwards;
+    }
+
+    .dot {
+      position: absolute;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background-color: #fff;
+      opacity: 0;
+      animation: fadeInOut 2s ease-in-out infinite, dotMotion 2s ease-in-out infinite;
+    }
+
+    .dot:nth-child(1) {
+      top: 0;
+      left: 50%;
+      animation-delay: 0s, 0s;
+    }
+
+    .dot:nth-child(2) {
+      top: 50%;
+      left: 100%;
+      animation-delay: 0.2s, 0.5s;
+    }
+
+    .dot:nth-child(3) {
+      bottom: 0;
+      left: 50%;
+      animation-delay: 0.4s, 1s;
+    }
+
+    .dot:nth-child(4) {
+      top: 50%;
+      left: 0;
+      animation-delay: 0.6s, 1.5s;
+    }
+
+    @keyframes rotateContainer {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    @keyframes fadeInOut {
+      0%, 100% { opacity: 0; }
+      50% { opacity: 1; }
+    }
+
+    @keyframes dotMotion {
+      0% { transform: scale(1) translateX(0) translateY(0); }
+      25% { transform: scale(1.5) translateX(20px) translateY(-20px); }
+      50% { transform: scale(1) translateX(0) translateY(0); }
+      75% { transform: scale(1.5) translateX(-20px) translateY(20px); }
+      100% { transform: scale(1) translateX(0) translateY(0); }
+    }
+
+    /* Page content hidden initially */
+    .content {
+      opacity: 0;
+      visibility: hidden;
+      transform: scale(0.9);
+      transition: opacity 1s ease, transform 1s ease;
+    }
+
+    .content.visible {
+      opacity: 1;
+      visibility: visible;
+      transform: scale(1);
+    }
+
     .clock-container {
       position: relative;
       width: 300px;
@@ -23,6 +130,7 @@
       justify-content: center;
       align-items: center;
     }
+
     .circle-line {
       position: absolute;
       width: 5px; /* Line width */
@@ -34,50 +142,69 @@
       border-radius: 5px;
       transition: background-color 0.5s ease; /* Add transition for smooth color change */
     }
+
     .info-container {
       position: absolute;
       text-align: center;
       color: #fff;
     }
+
     .time-container {
-        text-align: center;
-        margin-top: 15px;
+      text-align: center;
+      margin-top: 15px;
       font-size: 4.5em;
       margin-bottom: 9px; /* Add margin to separate time and date */
       color: #666;
       transition: color 0.5s ease;
     }
+
     .date-container {
       font-size: 1.05em; /* Smaller font size for date and day */
       color: #666;
       transition: color 0.5s ease;
     }
+
     .date-container #date {
-        margin-right: 12px;
-    }
-    .change-animation {
-        animation: pulse 0.3s ease-in-out;
+      margin-right: 12px;
     }
 
-    /* Keyframes for the animation */
+    .change-animation {
+      animation: pulse 0.3s ease-in-out;
+    }
+
     @keyframes pulse {
-        0% { transform: scale(1);  } 
-        50% { transform: scale(1.1);  } 
-        100% { transform: scale(1);  } 
+      0% { transform: scale(1);  }
+      50% { transform: scale(1.1);  }
+      100% { transform: scale(1);  }
     }
   </style>
 </head>
 <body>
 
-  <div class="clock-container">
-    <div class="info-container">
-      <div class="time-container">
-        <span id="time"></span>
-      </div>
+  <!-- Go back arrow (image) -->
+  <img src="Icons/left-arrow.png" alt="Go Back" class="go-back-arrow" width="20" height="20" onclick="goBack()">
 
-      <div class="date-container">
-        <span id="date"></span>
-        <span id="day"></span>
+
+  <!-- Loading animation -->
+  <div class="loading-container">
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
+  </div>
+
+  <!-- Page content hidden initially -->
+  <div class="content">
+    <div class="clock-container">
+      <div class="info-container">
+        <div class="time-container">
+          <span id="time"></span>
+        </div>
+
+        <div class="date-container">
+          <span id="date"></span>
+          <span id="day"></span>
+        </div>
       </div>
     </div>
   </div>
@@ -178,6 +305,27 @@
 
     setInterval(updateTimeAndDate, 1000);
     updateTimeAndDate();
+
+    // After 3 seconds, hide the loading animation and show the content with smooth "pop-in"
+    // After 3 seconds, hide the loading animation, show the clock, and make the arrow appear
+    setTimeout(() => {
+      document.querySelector(".loading-container").style.display = 'none';
+      document.querySelector(".content").classList.add('visible');
+      document.querySelector(".go-back-arrow").classList.add('show'); // Show the go back arrow
+    }, 3000);
+    function goBack() {
+    // Initially hide content and go-back-arrow
+    document.querySelector(".content").classList.remove('visible');
+    document.querySelector(".go-back-arrow").classList.remove('show');
+
+    // Show loading animation again
+    document.querySelector(".loading-container").style.display = 'flex';
+
+    // Delay navigation to allow time for the loading animation to appear
+    setTimeout(() => {
+      history.back(); // Go back after the delay
+    }, 3000); // Delay for 1.5 seconds
+  }
   </script>
 
 </body>
