--- a/index.html
+++ b/index.html
@@ -187,6 +187,21 @@
       position: relative; /* Ensure the top property works */
       top: 20px; /* Adjust this value to bring the image closer */
   }
+
+  @keyframes elasticScale {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0.1);
+      opacity: 0;
+    }
+  }
+
+  /* Apply the animation to the loading-container */
+  .loading-container.scale-down {
+    animation: elasticScale 1s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;
+  }
   </style>
 </head>
 <body>
@@ -219,10 +234,18 @@
   <script>
     // After 3 seconds, hide the loading animation and show the content with smooth "pop-in"
     setTimeout(() => {
-      document.querySelector(".loading-container").style.display = 'none';
-      document.querySelector(".content").classList.add('visible');
-      document.querySelector(".go-back-arrow").classList.add('show');
-    }, 3000);
+    const loadingContainer = document.querySelector(".loading-container");
+    const content = document.querySelector(".content");
+
+    // Apply the scaling animation
+    loadingContainer.classList.add("scale-down");
+
+    // Wait for the animation to complete (1 second), then hide the loading animation and show content
+    setTimeout(() => {
+      loadingContainer.style.display = "none";
+      content.classList.add("visible");
+    }, 1000); // Match the duration of the elasticScale animation
+  }, 3000);
   </script>
 
 </body>
