--- a/Time/index.html
+++ b/Time/index.html
@@ -182,7 +182,7 @@
 <body>
 
   <!-- Go back arrow (image) -->
-  <img src="Icons/left-arrow.png" alt="Go Back" class="go-back-arrow" width="20" height="20" onclick="goBack()">
+  <img src="../Icons/left-arrow.png" alt="Go Back" class="go-back-arrow" width="20" height="20" onclick="goBack()">
 
 
   <!-- Loading animation -->
